# talks_rust_dublin_tonic

./: .gitignore  Cargo.toml  build.rs
node/: chat.js  index.js  package-lock.json  package.json
proto/: chat.proto
src/: client.rs  server.rs
