[package]
name = "talk"
version = "0.1.0"
edition = "2018"
authors = ["Ertugrul Karademir <ekarademir@gmail.com>"]

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.5.2"
prost = "0.8.0"
tokio = {version = "1.12.0", features = ["full"]}
tokio-stream = "0.1.7"
log = "0.4.14"
env_logger = "0.9.0"
futures = "0.3.17"
async-stream = "0.3.2"
thiserror = "1.0.30"
anyhow = "1.0.44"

[build-dependencies]
tonic-build = "0.5.2"
anyhow = "1.0.44"
